Implementado scroll suave até a seção do produto

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     et
                     dolore magna aliqua. Metus vulputate eu scelerisque felis imperdiet proin fermentum. Praesent semper
                     feugiat nibh sed pulvinar proin gravida.</p>
-                <i class="fas fa-long-arrow-alt-down"></i>
+                <i class="fas fa-long-arrow-alt-down btn-scroll-to"></i>
             </div>
             <div class="center-card">
                 <div class="card">
@@ -95,10 +95,10 @@
             </div>
         </div>
     </main>
-    <section class="product-section">
+    <section class="product-section" id="product-scroll">
         <div class="product-container">
             <div class="product-image-container">
-                <img src="https://picsum.photos/300/400?random=1" alt="product image">
+                <img src="https://picsum.photos/350/500?random=1" alt="product image">
             </div>
             <div class="product-summary">
                 <p>Lorem ipsum lorem dolor</p>
@@ -212,6 +212,7 @@
             },
         });
     </script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
